--- a/app/src/main/res/layout/wine_card_component.xml
+++ b/app/src/main/res/layout/wine_card_component.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -38,15 +39,17 @@
 
     <ImageView
         android:id="@+id/ivWine_Picture"
-        android:layout_width="103dp"
-        android:layout_height="142dp"
+        android:layout_width="102dp"
+        android:layout_height="145dp"
         android:layout_alignParentStart="true"
         android:contentDescription="@string/wine_picture"
         app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@color/colorGreenButton"
-        tools:layout_editor_absoluteX="0dp" />
+        app:srcCompat="@color/colorGreenButton" />
 
     <RatingBar
         android:id="@+id/ratingBar"
