--- a/app/src/main/res/layout/activity_review_selection_testing.xml
+++ b/app/src/main/res/layout/activity_review_selection_testing.xml
@@ -51,7 +51,7 @@
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tvWine_Desc"
+        android:layout_above="@+id/tvWineDesc"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
@@ -62,12 +62,12 @@
         android:numStars="5"
         android:rating="5"
         android:stepSize=".5"
-        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
+        app:layout_constraintBottom_toTopOf="@+id/tvWineDesc"
         app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
         app:layout_constraintTop_toBottomOf="@+id/tvWineName" />
 
     <TextView
-        android:id="@+id/tvWine_Desc"
+        android:id="@+id/tvWineDesc"
         android:layout_width="263dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -86,10 +86,10 @@
         app:layout_constraintVertical_bias="0.79" />
 
     <TextView
-        android:id="@+id/tvSee_Reviews"
+        android:id="@+id/tvSeeReviews"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_alignEnd="@+id/tvWine_Desc"
+        android:layout_alignEnd="@+id/tvWineDesc"
         android:layout_alignTop="@+id/tvDetails"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
@@ -98,7 +98,7 @@
         android:text="@string/see_reviews"
         android:textColor="@color/colorGreenButton"
         app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc"
+        app:layout_constraintTop_toBottomOf="@+id/tvWineDesc"
         app:layout_constraintVertical_bias="0.42000002"
         tools:layout_editor_absoluteX="191dp" />
 
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/tvSee_Reviews"
+        android:layout_alignTop="@+id/tvSeeReviews"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -118,8 +118,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.96"
-        app:layout_constraintStart_toEndOf="@+id/tvSee_Reviews"
-        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc" />
+        app:layout_constraintStart_toEndOf="@+id/tvSeeReviews"
+        app:layout_constraintTop_toBottomOf="@+id/tvWineDesc" />
 
     <TextView
         android:id="@+id/tvDetails"
@@ -135,10 +135,10 @@
         android:text="@string/details"
         android:textColor="@color/colorGreenButton"
         app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/tvSee_Reviews"
+        app:layout_constraintEnd_toStartOf="@+id/tvSeeReviews"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
-        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc"
+        app:layout_constraintTop_toBottomOf="@+id/tvWineDesc"
         app:layout_constraintVertical_bias="0.32999998" />
 
     <TextView
@@ -155,7 +155,7 @@
         android:text="@string/wine_source"
         android:textColor="@color/cardview_light_background"
         android:textSize="9sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
+        app:layout_constraintBottom_toTopOf="@+id/tvWineDesc"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
@@ -187,7 +187,7 @@
         android:text="@string/wine_points"
         android:textColor="@android:color/white"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
+        app:layout_constraintBottom_toTopOf="@+id/tvWineDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.42"
         app:layout_constraintStart_toEndOf="@+id/ratingBar"
@@ -204,7 +204,7 @@
         android:text="@string/ratings_count"
         android:textColor="@color/cardview_light_background"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
+        app:layout_constraintBottom_toTopOf="@+id/tvWineDesc"
         app:layout_constraintEnd_toStartOf="@+id/tvWinePoints"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ratingBar"
