--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#403F3E</color>
     <color name="colorModalBox1">#525252</color>
     <color name="colorGreenButton">#41876a</color>
+    <color name="colorWhite">#FFFFFFFF</color>
 </resources>
